--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.29.0
-torch==2.2.0
-torchvision==0.17.0
-timm==0.9.12
-pillow==10.2.0
-numpy==1.26.4
-pytorch-grad-cam==1.5.2
-scikit-learn==1.3.2
+streamlit==1.32.0
+torch==2.0.0
+torchvision==0.15.0
+numpy
+pillow
+timm==0.9.2
+pytorch-grad-cam==1.4.8
