--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.32.0
-torch==2.0.0
-torchvision==0.15.0
+streamlit>=1.32.0
+torch==2.5.1
+torchvision==0.20.1
 numpy
 pillow
-timm==0.9.2
-pytorch-grad-cam==1.4.8
